# rovi_utils

./: CMakeLists.txt  README.md  config_tf.yaml  package.xml  setup.py  tf_config.yaml
a-calib/: README.md
auto_param_maker/: auto_param_tuner.py  ransac_solver.py
calib_board/: 16x11-12mm.ai  16x11-12mm.yaml  18x13-15mm.yaml
config_tf/: README.md  config_tf.launch  config_tf.py  config_tf.ui  config_tf.zui  config_ts-test.js
cropper/: README.md  config.yaml  cropper.launch  cropper.py  cropper.rviz  cropper.ui  cropper.yaml  cropper.yaml.sample  cropperRviz.sh  cropper_solver.py  dummy_tf.yaml  dummy_tf.yaml.sample  example.rviz  example.ui  filer.py  launch_cropper.sh  param.yaml
cv_test/: cv_test.launch  cv_test.py
data/: model.ply  sample.ply  test.ply
device_ctrl/: devantech_usb_relay_2ch_comm.py  setup.sh
gh3d/: detector.py  gh3ddisp.py  template.py  test.sh  tool.py  ycam3d_cam_param.py
image_hack/: image_hack.launch  image_hack_test.py
image_hcat/: hcat.launch
launch/: floats3pc_example.launch
manager/: config.yaml  launch.launch  launch_manager.py  recipe.launch
panel/: README.md  launch.launch  panel.launch  recipe.launch
paramset/: README.md  param.yaml  paramset.launch  setup.zui
picker/: config.yaml  demo.rviz  param.yaml  path_test.js  picker.launch  picker.py  sample.js  score.yaml  test.sh
r-calib/: 10L.yaml  HowTo.md  README.md  config.yaml  config_tf.yaml  param.yaml  rcalib.desktop  rcalib.launch  rcalib.py  rcalib.ui  rcalib.zui  rcalibV2.launch  rcalibV2.zui  rcalib_input.txt  rcalib_test.py  rguide.py
script/: filer.py  (+17 more)
(+51 files in other folders)
