<?xml version="1.0"?>
<package format="2">
  <name>rovi_utils</name>
  <version>1.0.0</version>
  <description>Rovi Utils</description>

  <maintainer email="yoods@todo.todo">YOODS</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/yoods/rovi_utils</url>
  <author email="yoods@todo.todo">YOODS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rovi</depend>
</package>
